...
                    android:text="@{album.description}"
                    android:textColor="@color/white"
                    android:background="@color/transparente"/>
                </ScrollView>

                <Button
                    android:id="@+id/add_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comentar"
                    android:textColor="@color/fdark700"
                    android:textSize="20sp"
                    android:layout_margin="3dp"
...
                    android:background="@color/cardview_dark_background"
                    android:paddingStart="@dimen/grid_spacing"
                    android:paddingEnd="@dimen/grid_spacing"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listComment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/comment_item" />

                </androidx.core.widget.NestedScrollView>

...
