<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="50dp"
        android:paddingBottom="100dp"
        android:orientation="vertical"
        android:gravity="center">


        <ImageView
            android:id="@+id/albumCreateImage"
            android:layout_width="267dp"
            android:layout_height="267dp"
            android:background="@color/transparente"
            android:scaleType="centerCrop"
            android:src="@drawable/add_img"
            android:contentDescription="@string/agregar_imagen_para_crear_el_album" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_album_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColor="@color/white" 
                android:background="@color/fdark500"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_album_desc"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/descripcion"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@color/fdark500"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fdark500"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/select_date"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:textColorHint="@color/white"
            android:contentDescription="@string/genero">


            <AutoCompleteTextView
                android:id="@+id/txt_album_genre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fdark500"
                android:ellipsize="end"
                android:inputType="none"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/genero"
                android:textColor="@color/hint_color"
                android:textAlignment="center"
                tools:ignore="LabelFor"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:contentDescription="@string/disquera"
            android:textColorHint="@color/white">

            <AutoCompleteTextView
                android:id="@+id/txt_album_disc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fdark500"
                android:ellipsize="end"
                android:inputType="none"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/disquera"
                android:textColor="@color/hint_color"
                android:textAlignment="center"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/album_create_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/crear"
            android:backgroundTint="@color/teal_200"/>


    </LinearLayout>
</ScrollView>